[package]
name = "order-maintenance"
version = "0.1.1"
edition = "2021"
authors = ["John Hui <j-hui@cs.columbia.edu>"]
license = "MIT"
keywords = ["order", "no_std"]
description = "Totally-ordered priorities for the order maintainence problem"
repository = "https://github.com/j-hui/order-maintenance"

[dependencies]
slab = "0.4.9"
order_maintenance_macros = { version = "*", path = "./order_maintenance_macros" }

[dev-dependencies]
rand = "0.8.5"
criterion = {version = "0.5.1", features = ["html_reports"]}
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
flamegraph = "0.6.4"

[[bench]]
name = "tag_range"
harness = false

[[bench]]
name = "list_range"
harness = false

[workspace]
members = [ "order_maintenance_macros" ]
